--- a/templates/create_catalog.html.twig
+++ b/templates/create_catalog.html.twig
@@ -10,6 +10,7 @@
         Set the name from your new catalog  
         <p>
             {{ form_widget(form.name) }}
+            {{ form_errors(form.name) }}
         </p>
         </div>
 
